# scanner-mcp

./: .gitignore  LICENSE  PRIVACY.md  README.md  pyproject.toml  test_scan.py
.github/workflows/: publish.yml
docs/: EXTENSION.md  PROMOTION.md  make_demo.py
mcpb/: .mcpbignore  make_icon.py  manifest.json
mcpb/server/: main.py
scanner_mcp/: __init__.py  imaging.py  models.py  ocr.py  server.py
scanner_mcp/backends/: __init__.py  base.py  escl.py  sane.py  twain.py  wia.py
