[project]
name = "scanner-mcp"
version = "0.1.1"
description = "Generic MCP server exposing a scan tool to network (eSCL/AirScan) and USB (WIA/SANE/TWAIN) scanners."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amin Haji-Abolhassani", email = "amin.h.a@gmail.com" }]
keywords = [
    "mcp", "model-context-protocol", "claude", "scanner", "scanning",
    "escl", "airscan", "mopria", "wia", "sane", "twain", "ocr",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "zeroconf>=0.132",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/AminHA1248/scanner-mcp"
Repository = "https://github.com/AminHA1248/scanner-mcp"
Issues = "https://github.com/AminHA1248/scanner-mcp/issues"

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
# TWAIN backend for Windows scanners that expose no usable WIA driver.
twain = ["pytwain>=2.3; platform_system == 'Windows'"]

[project.scripts]
scanner-mcp = "scanner_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scanner_mcp"]
